2/23/12 setOpaque(false) for radio buttons
2/22/12 color center and right beam segments based on wavelength and %T, use gradient for beam segment in cuvette
2/22/12 show vertical diameter line in detector, for debugging
2/22/12 restore ability to move detector
# 0.00.12 (61619) Feb 22, 2012
2/22/12 dev version to verify absorbance (A) and transmittance (T) models
2/22/12 change molar absorptivity for Drink Mix, remove molar scaling factor from model
2/22/12 check in JC's latest spreadsheet
2/22/12 temporarily make detector position fixed
2/22/12 add alpha to left segment of beam
2/22/12 fix molar conversion factor for Drink Mix
2/22/12 make beam unpickable so that we can grab detector probe through beam
2/22/12 add molar conversion factor to model
2/22/12 revert %T model: %T = 100 * 10^(-A)
2/22/12 change %T model: %T = 100 * e^(-A)
2/22/12 fix snapping of cuvette width to nearest 0.1cm
2/22/12 change detector to 2 decimal places, to match data in spreadsheet
2/22/12 change to vertical layout of "Light View" radio buttons, so there's more room to move the detector probe between the light and cuvette
2/22/12 make AT detector show "-" when light is off
2/22/12 check in JC's latest spreadsheet
2/22/12 change %T model: %T = 100 * 10^(-A)
2/21/12 add "%" after %T value in AT detector
2/21/12 move duplicate code for particle nodes into a base class
2/21/12 doc and minor tweaks for potential code review of Concentration sim
2/21/12 create implementation-notes.txt and add notes for Concentration tab
2/21/12 create model.txt and write description for Concentration tab
2/21/12 first pass at %T model (but something isn't right)
2/21/12 wire up %T property (value not correctly computed yet)
2/21/12 first pass at integrating absorbance model (detector always shows absorbance, no matter where it's placed)
2/21/12 check in JC's latest measured data for molar absorption
2/21/12 add max molar absorption to BeersLawSolution (looked these up in JC's spreadsheet)