@@ -15,23 +15,11 @@ import edu.umd.cs.piccolo.util.PBounds;
  */
 public class Shaker extends Movable {
 
-    //TODO might be better if these points were in the coordinate system of the image file
-    // Locations of the shaker holes, relative to the shaker's local origin, and specific to the shaker image file.
-    private static final ImmutableVector2D[] RELATIVE_HOLE_LOCATIONS = {
-            new ImmutableVector2D( 0, 0 ),
-            new ImmutableVector2D( -10, -16 ),
-            new ImmutableVector2D( -16, -10 ),
-            new ImmutableVector2D( -8, 5 ),
-            new ImmutableVector2D( 8, -5 ),
-            new ImmutableVector2D( 10, 17 ),
-            new ImmutableVector2D( 21, 15 ),
-    };
-
     private final double orientation; // rotation angle, in radians
     public final Property<Solute> solute;
     public final Property<Boolean> visible;
     public final Property<Boolean> empty;
-    private final double maxDispensingRate;
+    private final double maxDispensingRate; // mol/sec
     private final Property<Double> dispensingRate; // mol/sec
     private ImmutableVector2D previousLocation;
 
@@ -66,31 +54,21 @@ public class Shaker extends Movable {
         return dispensingRate.get();
     }
 
-    private void setDispensingRate( double dispensingRate ) {
-        if ( !empty.get() ) {
-            this.dispensingRate.set( dispensingRate );
-        }
-    }
-
     public void addDispensingRateObserver( SimpleObserver observer ) {
         dispensingRate.addObserver( observer );
-    }
-
-    public ImmutableVector2D[] getRelativeHoleLocations() {
-        return RELATIVE_HOLE_LOCATIONS;
     }
 
     // Set the dispensing rate if the shaker is moving.
     public void stepInTime() {
         if ( visible.get() && !empty.get() ) {
             if ( previousLocation.equals( location.get() ) ) {
-                setDispensingRate( 0 ); // shaker is not moving, don't dispense anything
+                this.dispensingRate.set( 0d ); // shaker is not moving, don't dispense anything
             }
             else {
-                setDispensingRate( maxDispensingRate ); // this seems to work fine
-                previousLocation = new ImmutableVector2D( getX(), getY() );
+                this.dispensingRate.set( maxDispensingRate ); // this seems to work fine
             }
         }
+        previousLocation = new ImmutableVector2D( getX(), getY() );
     }
 
     @Override public void reset() {
